--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -1,45 +1,43 @@
 
-<% if action == :edit %>
-  <% action_url = cat_url(@cat) %>
-<% else %>
-  <% action_url = cats_url %>
-<% end %>
+<% action = (cat.persisted? ? cat_url(cat) : cats_url) %>
+<% method = (cat.persisted? ? :patch : :post) %>
 
-<form action="<% action_url %>"  method = "post">
-  <% if action == :edit %>
-    <input type="hidden" name="_method" value="PATCH">
-  <% end %>
+<form action="<% action %>"  method = "post">
+
+  <input type="hidden" name="_method" value="<%= method%>">
 
   <label for="name">Name</label>
-  <input id="name" type="text" name="cat[name]" value="<%= @cat.name%>">
+  <input id="name" type="text" name="cat[name]" value="<%= cat.name%>">
 
   <br>
 
   <label for="sex">Sex</label>
-  <input id="sex", name="sex" type="radio" value="M" <%= @cat.sex == 'M' ? checked = "checked" : "" %> >M
-  <input id="sex", name="sex" type="radio" value="F" <%= @cat.sex == 'F' ? checked = "checked" : "" %> >F
+  <input id="sex", name="sex" type="radio" value="M" <%= cat.sex == 'M' ? checked = "checked" : "" %> >M
+  <input id="sex", name="sex" type="radio" value="F" <%= cat.sex == 'F' ? checked = "checked" : "" %> >F
 
 
   <br>
 
+
   <label for="color">Color</label>
   <select id="color" name="color">
-    <option value="blank" disabled <% @cat.color ? "" : "selected" %> >       </option>
+
+    <option value="blank" disabled <%= cat.color ? "" : selected = "selected" %> >       </option>
     <% Cat::COLORS.each do |color| %>
-     <option value= "cat[color]" <%=@cat.color == color ? selected = "selected" : "" %> ><%=color.capitalize%></option>
+     <option value= "cat[color]" <%=cat.color == color ? selected = "selected" : "" %> ><%=color.capitalize%></option>
     <% end %>
   </select>
 
   <br>
 
   <label for="birth_date">Birth Date</label>
-    <input id="birth_date", name="birth_date" type="date" value="<%= @cat.birth_date%>">
+    <input id="birth_date", name="birth_date" type="date" value="<%= cat.birth_date%>">
 
   <br>
 
   <label for="description">Description</label>
     <textarea name="cat[description]" >
-      <%= @cat.description %>
+      <%= cat.description %>
     </textarea>
 
 
