--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,7 +1,5 @@
-<h1>Show Cats!</h1>
 
-
-<p><%= @cat.name %></p>
+<h1><%= @cat.name %></h1>
 <table>
   <tr>
     <th>Atrribute</th>
@@ -23,4 +21,24 @@
     <td>Sex</td>
     <td><%= @cat.sex %></td>
   </tr>
+</table>
+
+
+<p>Rental Requests</p>
+<table>
+  <tr>
+    <th>User</th>
+    <th>Start Date</th>
+    <th>End Date</th>
+    <th>Status</th>
+  </tr>
+  <% @cat.cat_rental_requests.each do |request|  %>
+  <tr>
+    <td>User</td>
+    <td><%= request.start_date %></td>
+    <td><%= request.end_date %></td>
+    <td><%= request.status %></td>
+
+  </tr>
+  <% end %>
 </table>
